--- a/src/Aside/aside.scss
+++ b/src/Aside/aside.scss
@@ -1,7 +1,7 @@
 @import "../variables";
 .aside {
   background: indianred;
-  width: 30%;
+  width: 28%;
   padding: 5px;
   ul {
     list-style-type: none;
@@ -13,5 +13,10 @@
     a {
       color: $text-color;
     }
+  }
+  .user-info {
+    background: pink;
+    border-radius: 20px;
+    padding: 10px;
   }
 }
