--- a/src/Main/main.scss
+++ b/src/Main/main.scss
@@ -4,4 +4,31 @@
   align-items: stretch;
   padding: 35px 25px;
   background: grey;
+  flex-wrap: wrap;
+  .user {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    li {
+      cursor: pointer;
+    }
+  }
+  .button-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    button {
+      width: 100px;
+      height: 30px;
+      border: 1px solid white;
+      border-radius: 3px;
+      cursor: pointer;
+      margin-right: 15px;
+      &.active {
+        background: transparent;
+      }
+    }
+  }
+
 }
