--- a/src/Header/header.scss
+++ b/src/Header/header.scss
@@ -1,14 +1,20 @@
 @import  '../variables.scss';
 .header {
   padding: 35px 25px;
-  background: pink;
+  //background: pink;
   display: flex;
   justify-content: space-between;
   align-items: center;
   a {
+    width: 100px;
+    height: 70px;
     text-transform: uppercase;
     font: $base-font;
     color: $text-color;
     font-weight: bold;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
