--- a/src/Navigation/navigation.scss
+++ b/src/Navigation/navigation.scss
@@ -7,5 +7,11 @@
     li {
       margin: 0 0 0 15px;
     }
+    a {
+      text-decoration: none;
+      &.active {
+        text-decoration: underline;
+      }
+    }
   }
 }
