--- a/src/Tabs/tabs.scss
+++ b/src/Tabs/tabs.scss
@@ -14,6 +14,9 @@
       li {
         padding:5px 15px;
         border: 1px solid #002B36;
+        &.active {
+          background: #fff;
+        }
         a {
           font-size: 16px;
           line-height: 20px;
