Add homework for redux

--- a/src/components/Loader/loader.scss
+++ b/src/components/Loader/loader.scss
@@ -3,5 +3,5 @@
   width: 200px;
   height: 200px;
   margin: 150px auto;
-  background: url("../images/loader.gif") center no-repeat;
+  background: url("../../images/loader.gif") center no-repeat;
 }
