--- a/src/Tabs/tabs.scss
+++ b/src/Tabs/tabs.scss
@@ -15,7 +15,7 @@
         padding:5px 15px;
         border: 1px solid #002B36;
         &.active {
-          background: #fff;
+          background: pink;
         }
         a {
           font-size: 16px;
