50% homework without redux

--- a/src/components/Tabs/tabs.scss
+++ b/src/components/Tabs/tabs.scss
@@ -14,6 +14,7 @@
       li {
         padding:5px 15px;
         border: 1px solid #002B36;
+        background: #000;
         &.active {
           background: #fff;
         }
