--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,3 +6,7 @@ $base-font: 14px/20px Georgia, sans;
 $text-color: #002B36;
 $black: #000;
 $white: #fff;
+
+$gold: #D0A154;
+$red: #df5849;
+$green: #00d7af;
