--- a/src/components/Tabs/tabs.scss
+++ b/src/components/Tabs/tabs.scss
@@ -1,6 +1,16 @@
+@import "../../variables";
+
 .tab {
-  margin-top: 25px;
+  width: 50%;
+  margin: 10% auto 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   .nav-tab {
+    width: 100%;
+    display: flex;
+    justify-content: center;
     margin-bottom: -1px;
     position: relative;
     z-index: 2;
@@ -12,30 +22,44 @@
       justify-content: flex-start;
       align-items: center;
       li {
-        padding:5px 15px;
-        border: 1px solid #002B36;
-        background: #000;
+        min-width: 70px;
+        padding:5px 0;
+        border: 1px solid black;
+        background: $gold;
+        transition-duration: 0.3s;
+        &:hover {
+          background: rgba(201, 161, 64, 0.5);
+        }
+        &:first-child {
+          border-top-left-radius: 5px;
+          border-bottom-left-radius: 5px;
+        }
+        &:last-child {
+          border-top-right-radius: 5px;
+          border-bottom-right-radius: 5px;
+        }
         &.active {
           background: #fff;
         }
         a {
+          display: block;
+          text-align: center;
           font-size: 16px;
           line-height: 20px;
           font-weight: 600;
           text-transform: uppercase;
           text-decoration: none;
-          color: #00d7af;
+          color: black;
         }
       }
     }
   }
   .tab-content {
-    border: 1px solid #002B36;
-    border-bottom-right-radius: 3px;
-    border-bottom-left-radius: 3px;
-    border-top-right-radius: 3px;
-    padding: 15px;
+    width: 100%;
     position: relative;
     z-index: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
   }
 }
