--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -40,8 +40,12 @@
     &:hover {
       background: white;
     }
+    &:last-child {
+      padding: 0;
+    }
     a {
       display: block;
+      padding: 10px;
       text-decoration: none;
       font-size: 14px;
       line-height: 18px;
