--- a/src/pages/TaskList/taskList.scss
+++ b/src/pages/TaskList/taskList.scss
@@ -1,18 +1,47 @@
 @import "../../variables";
 
 .taskList {
+  width: 69%;
+  border: 1px solid #002B36;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  padding: 15px;
+  margin: 0 auto;
   &__item {
     display: flex;
     justify-content:flex-start;
     align-items: center;
     margin: 20px 0;
     a {
+      text-decoration: none;
+      position: relative;
+      &:after {
+        content: '';
+        opacity: 0;
+        width: 100%;
+        height: 2px;
+        background: $grey;
+        transition-duration: 0.3s;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: -2px;
+      }
+      &:hover {
+        &:after {
+          opacity: 1;
+          display: block;
+        }
+      }
       &.in-progress {
-        color: $gold;
+        color: $grey;
       }
       &.done {
-        color: $green;
+        color: $blue;
         text-decoration: line-through;
+        &:after {
+          display: none;
+        }
       }
     }
 
@@ -28,8 +57,8 @@
     line-height: 24px;
     cursor: pointer;
     &.in-progress {
-      color: $gold;
-      border: 1px solid $gold;
+      color: $grey;
+      border: 1px solid $grey;
       border-radius: 3px;
     }
     &.delete {
@@ -38,9 +67,26 @@
       border-radius: 3px;
     }
     &.done {
-      color: $green;
-      border: 1px solid $green;
+      color: $blue;
+      border: 1px solid $blue;
       border-radius: 3px;
+    }
+  }
+  &__btn {
+    width: 45%;
+    margin: 25px auto;
+    padding: 10px;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: bold;
+    background: $gold;
+    border: 1px solid $gold;
+    border-radius: 5px;
+    color: black;
+    transition: background 0.3s;
+    cursor: pointer;
+    &:hover {
+      background: white;
     }
   }
 }
