--- a/src/parts/Navigation/navigation.scss
+++ b/src/parts/Navigation/navigation.scss
@@ -1,3 +1,5 @@
+@import "../../variables";
+
 .main-nav {
   ul {
     display: flex;
@@ -9,8 +11,30 @@
     }
     a {
       text-decoration: none;
+      position: relative;
+      &:hover {
+        &:after {
+          opacity: 1;
+          display: block;
+        }
+      }
+      &:after {
+        content: '';
+        opacity: 0;
+        width: 100%;
+        height: 2px;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: -2px;
+        background: $gold;
+        transition-duration: 0.3s;
+      }
       &.active {
-        text-decoration: underline;
+        &:after {
+          opacity: 1;
+          display: block;
+        }
       }
     }
   }
