--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,6 +6,8 @@ $base-font: 14px/20px Georgia, sans;
 $text-color: #002B36;
 $black: #000;
 $white: #fff;
+$grey: #808080;
+$blue:#6498b0;
 
 $gold: #D0A154;
 $red: #df5849;
