--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -26,10 +26,11 @@
     margin: 20px auto;
   }
   &__btn {
-    width: 45%;
-    padding: 10px;
+    width: 50%;
+    display: block;
+    margin: 0 auto;
     font-size: 14px;
-    line-height: 18px;
+    line-height: 40px;
     font-weight: bold;
     background: #D0A154;
     border: 1px solid #D0A154;
