Fixed some bugs

--- a/src/parts/Header/header.scss
+++ b/src/parts/Header/header.scss
@@ -12,6 +12,10 @@
     font: $base-font;
     color: $text-color;
     font-weight: bold;
+  }
+  .logo {
+    width: 100px;
+    height: 70px;
     img {
       width: 100%;
       height: 100%;
