--- a/src/pages/TaskList/taskList.scss
+++ b/src/pages/TaskList/taskList.scss
@@ -15,12 +15,13 @@
     a {
       text-decoration: none;
       position: relative;
+      color: black;
       &:after {
         content: '';
         opacity: 0;
         width: 100%;
         height: 2px;
-        background: $grey;
+        background: black;
         transition-duration: 0.3s;
         position: absolute;
         left: 0;
@@ -35,6 +36,14 @@
       }
       &.in-progress {
         color: $grey;
+        &:after {
+          content: '';
+          margin-top: 2px;
+          background-color: $grey;
+          height: 2px;
+          width: 100%;
+          opacity: 1;
+        }
       }
       &.done {
         color: $blue;
